--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
       "@pages": ["src/pages"],
       "@pages/*": ["src/pages/*"],
       "@components": ["src/components"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@utils": ["src/utils"],
+      "@utils/*": ["src/utils/*"]
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
